--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -13,12 +13,10 @@ ion-toolbar:root{
 
 .btn-home{
     background: #d6e601;
+    color: white !important;
 }
 
 .btn-logout{
     background: #eb4a44;
-}
-
-.icon{
     color: white !important;
 }
