--- a/src/app/shared/components/nav/nav.component.scss
+++ b/src/app/shared/components/nav/nav.component.scss
@@ -1,6 +1,6 @@
 ion-header{
-    // background-color: #ff9600 !important;
-    background-image: url("../../../../assets/img/header-fondo-app.png");
+    background-color: #ff9600 !important;
+    // background-image: url("../../../../assets/img/header-fondo-app.png");
     background-size:auto;
     background-position: center;
     // height: 100px;
