--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -74,5 +74,9 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  /*APP **/
+  --ion-app-primary : #ff9600;
+  --ion-app-secondary : #d6e601;
 }
 
