--- a/src/app/pages/pedidos/pedidos.page.html
+++ b/src/app/pages/pedidos/pedidos.page.html
@@ -7,27 +7,27 @@
         <div class=" mt-5 h-100">
           <h1 class="text-start pt-5">Ordenes del día</h1>
           <div class="d-flex row  my-4"  >
-            <ion-button (click)="seleccionar(status.TOCONFIRM)" class="mx-auto col-md-2 my-3"  expand="block" style="color: white !important; max-width: 250px;" shape="round">
+            <ion-button (click)="seleccionar(status.TOCONFIRM)" class="mx-auto col-md-2 my-3"  expand="block" style="color: #000000 !important; max-width: 250px; --background : #d6e601;" shape="round">
               Pendientes <span class="font-bold" class="ms-3 c " style="font-weight: bolder;">{{TOCONFIRM}}</span>
             </ion-button>
 
-            <ion-button (click)="seleccionar(status.ACCEPTED)"  class="mx-auto col-md-2 my-3"  expand="block" style="color: white !important; max-width: 250px;" shape="round">
+            <ion-button (click)="seleccionar(status.ACCEPTED)"  class="mx-auto col-md-2 my-3"  expand="block" style="color: #000000 !important; max-width: 250px; --background : #d6e601;" shape="round">
               Aceptadas <span class="badge badge-light" class="ms-3 c" style="font-weight: bolder;">{{ACCEPTED}}</span>
             </ion-button>
 
-            <ion-button (click)="seleccionar(status.PREPARING)"  class="mx-auto col-md-2 my-3"  expand="block" style="color: white !important; max-width: 250px;" shape="round">
+            <ion-button (click)="seleccionar(status.PREPARING)"  class="mx-auto col-md-2 my-3"  expand="block" style="color: #000000 !important; max-width: 250px; --background : #d6e601;" shape="round">
               reparación <span class="badge badge-light" class="ms-3 c" style="font-weight: bolder;">{{PREPARING}}</span>
             </ion-button>
 
-            <ion-button (click)="seleccionar(status.READY)"  class="mx-auto col-md-2 my-3"  expand="block" style="color: white !important; max-width: 250px;" shape="round">
+            <ion-button (click)="seleccionar(status.READY)"  class="mx-auto col-md-2 my-3"  expand="block" style="color: #000000 !important; max-width: 250px; --background : #d6e601;" shape="round">
               Para enviar <span class="badge badge-light" class="ms-3 c"style="font-weight: bolder;">{{READY}}</span>
             </ion-button>
 
-            <ion-button (click)="seleccionar(status.ONWALK)"  class="mx-auto col-md-2 my-3"  expand="block" style="color: white !important; max-width: 250px;" shape="round">
+            <ion-button (click)="seleccionar(status.ONWALK)"  class="mx-auto col-md-2 my-3"  expand="block" style="color: #000000 !important; max-width: 250px; --background : #d6e601;" shape="round">
               Enviadas <span class="badge badge-light" class="ms-3 c" style="font-weight: bolder;">{{ONWALK}}</span>
             </ion-button>
 
-            <ion-button (click)="seleccionar(status.FINISHED)" class="mx-auto col-md-2 my-3"  expand="block" style="color: white !important; max-width: 250px;" shape="round">
+            <ion-button (click)="seleccionar(status.FINISHED)" class="mx-auto col-md-2 my-3"  expand="block" style="color: #000000 !important; max-width: 250px; --background : #d6e601;" shape="round">
               Terminadas  <span class="badge badge-light" class="ms-3 " style="font-weight: bolder;">{{FINISHED}}</span>
             </ion-button>
 
