--- a/src/app/pages/restaurant/pages/adicionales/adicionales.component.scss
+++ b/src/app/pages/restaurant/pages/adicionales/adicionales.component.scss
@@ -1,9 +1,5 @@
 ion-label, ion-select{
-    color : white !important;
-}
-
-ion-button{
-    --background : #d6e601 !important;
+    color : #000000 !important;
 }
 
 ion-toggle{
