--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -13,10 +13,10 @@ ion-toolbar:root{
 
 .btn-home{
     background: #d6e601;
-    color: white !important;
+    color: #efefef !important;
 }
 
 .btn-logout{
     background: #eb4a44;
-    color: white !important;
+    color: #efefef !important;
 }
