--- a/src/app/pages/restaurant/restaurant.page.html
+++ b/src/app/pages/restaurant/restaurant.page.html
@@ -11,17 +11,17 @@
         <ion-grid >
           <ion-row>
             <ion-col size="12" sizeMd="4">
-              <ion-button (click)="select('cat')" style="width: 200px; color:white!important; --background: #d6e601;" class="mx-auto" expand="block"  shape="round">
+              <ion-button (click)="select('cat')" style="width: 200px; color:#000000 !important; --background: #d6e601;" class="mx-auto" expand="block"  shape="round">
                 Categorias
               </ion-button>
             </ion-col>
             <ion-col size="12" sizeMd="4">
-              <ion-button (click)="select('prod')" style="width: 200px; color:white!important; --background: #d6e601;"  class="mx-auto" expand="block"  shape="round">
+              <ion-button (click)="select('prod')" style="width: 200px; color:#000000 !important; --background: #d6e601;"  class="mx-auto" expand="block"  shape="round">
                 Productos
               </ion-button>
             </ion-col>
             <ion-col size="12" sizeMd="4">
-              <ion-button (click)="select('add')"  style="width: 200px; color:white!important; --background: #d6e601;"  class="mx-auto" expand="block"  shape="round">
+              <ion-button (click)="select('add')"  style="width: 200px; color:#000000 !important; --background: #d6e601;"  class="mx-auto" expand="block"  shape="round">
                 Adicionales
               </ion-button>
             </ion-col>
